💄📝✨🐛 - style edits, content edits, new content and bug squashes

--- a/styles/pinning.css
+++ b/styles/pinning.css
@@ -31,18 +31,25 @@
   -webkit-transform: translateZ(0);
 }
 
-/* .pin_clipped .pinned_background {
+.pin_clipped .pinned_background {
   -webkit-clip-path: inset(-0.5px 0);
   clip-path: inset(-0.5px 0);
   position: absolute;
   height: 100%;
-} */
+}
 
 /* ----- FOR THE PINNED TEXT BOXES ----- */
 
+.pinned_foreground_content_wrapper {
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .pinned_foreground:nth-child(2) > :first-child:not(.first_pin) {
-  margin-top: 50vh !important;
-  margin-top: calc(var(--vh, 1vh) * 50) !important;
+  /* margin-top: 50vh !important;
+  margin-top: calc(var(--vh, 1vh) * 50) !important; */
 }
 
 .last_pin,
@@ -66,24 +73,21 @@
 }
 
 .pinned_foreground_content {
-  margin-top: 50vh;
+  /* margin-top: 50vh;
   margin-top: calc(var(--vh, 1vh) * 50);
 
   margin-bottom: 50vh;
   margin-bottom: calc(var(--vh, 1vh) * 50);
 
-  /* color: white; */
-  /* background-color: rgba(0, 0, 0, 0.8); */
   padding: var(--space--smallmed);
   border-radius: var(--border-radius--pill);
-  pointer-events: auto;
+  pointer-events: auto; */
 }
 
 .pinned_foreground {
   display: flex;
   flex-direction: column;
   position: relative;
-  pointer-events: none;
   align-items: center;
 }
 
@@ -123,81 +127,13 @@
   opacity: 0;
 }
 
-.pinned_background figure {
-  overflow: hidden;
-  z-index: 1;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-
-  transition: opacity 0.5s ease-in-out;
-}
-
-/* .pinned_background video {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-
-  object-fit: cover;
-} */
-
-.pinned_background picture img {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
-
-  object-fit: cover;
-  position: absolute;
-}
-
-.pinned_background figcaption {
-  opacity: 1 !important;
-  width: fit-content !important;
-  color: white;
-  position: absolute;
-  top: 100%;
-  left: 0px;
-  height: 1.6rem;
-  font-family: var(--font-family--base);
-  font-size: var(--font-size--x-small);
-  background-color: rgba(0, 0, 0, 0.4);
-  padding: 5px 10px 0 10px;
-  display: block;
-  transform: translateY(calc(-1.6rem));
-  text-wrap: nowrap;
-}
-
-.pinned_media_attrib_mobile {
-  display: none !important;
-}
-
 .make_visible {
   opacity: 1 !important;
-}
-
-.pos_top {
-  object-position: top !important;
-}
-.pos_center {
-  object-position: center !important;
-}
-.pos_bottom {
-  object-position: bottom !important;
-}
-.pos_right {
-  object-position: right !important;
-}
-.pos_left {
-  object-position: left !important;
 }
 
 /* -------- Media queries ------- */
 
 @media only screen and (max-width: 599px) {
-  .pinned_media_attrib_mobile {
-    display: block !important;
-  }
-
   .pinned_media_attrib {
     display: none !important;
   }
